# ptrace

./: LICENSE  README  default.nix  ptrace.cabal
arch/amd64/System/PTrace/: PTRegs.hs
arch/i386/System/PTrace/: PTRegs.hs
arch/x86_64/System/PTrace/: PTRegs.hs
src/System/: PTrace.hs
src/System/PTrace/: Raw.hs  Types.hs  X86_64.hs
