Name:                ptrace
Version:             0.2
License:             BSD3
License-file:        LICENSE
Author:              Matthew Maurer
Maintainer:          maurer@matthewmaurer.org
Copyright:           Matthew Maurer (c) 2011 
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Hs-Source-Dirs:    src
  Exposed-modules:   System.PTrace
  Other-Modules:     System.PTrace.Types, System.PTrace.Raw,
                     System.PTrace.PTRegs
  Build-depends:     base, mtl, unix, filepath, c-storable-deriving,
                     ghc-prim
  Extensions:        GeneralizedNewtypeDeriving,
                     ForeignFunctionInterface,
                     DeriveGeneric,
                     MultiParamTypeClasses,
                     ScopedTypeVariables
  If arch(x86_64)
    Hs-Source-Dirs:  arch/x86_64/
  If arch(i386)
    Hs-Source-Dirs:  arch/i386/
